styles/styles.css
/*
 * Universal declarations
 */

html {
    font-family: "Roboto", Arial, Helvetica, sans-serif;
}

*, *::before, *::after {
    box-sizing: border-box;
}

body {
    margin: 0;
}

.inner {
    display: flex;
    flex: 0 1 1200px;
}

/*
 * Delartions for header
 */

header {
    display: flex;
    justify-content: center;
    align-items: center;

    background-color: #1f2937;
}

header .inner {
    justify-content: space-between;
    align-items: center;
}

h1 {
    font-size: 24px;
    color: #f9f1f8
}

header ul {
    display: flex;
    list-style-type: none;
    padding: 0;
    gap: 30px;
}

header a {
    text-decoration: none;
    font-size: 18px;
    color: #e5e7eb;
}

/*
 * Declarations for main
 */

main {
    display: flex;
    flex-direction: column;
    align-items: center;
}

/*
 * Declaration for page 1
 */

.page-1 {
    display: flex;
    background-color: #1f2937;
    min-width: 100vw;
    min-height: 450px;
    justify-content: center;
    align-items: center;
}

.inner {
    gap: 150px;
}

.page-1 .text {
    flex: 3;
}

.page-1 .img {
    flex: 4;
}

.page-1 h2 {
    font-size: 48px;
    font-weight: 800;
    color: #f9faf8;
    margin: 0;
}

.page-1 p {
    font-size: 18px;
    color: #e5e7eb;
}

.page-1 button {
    background-color: #3882f6;
    color: #f9faf8;
    font-weight: bold;
    font-size: 18px;
    border: none;
    border-radius: 5px;
    width: 120px;
    height: 30px;
    cursor: pointer;
}

.page-1 .img {
    background-color: rgba(200, 200, 200, 0.5);
    display: flex;
    justify-content: center;
    align-items: center;
}

